--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2006 - Current</span> </div>
             </div>
             <ul>
-                <li>Full developement of personalized websites in conformity with the client's demands from scratch with and using basic HTML, CSS, Javascript, PHP, or by using different content management systems.</li>
+                <li>Full development of personalized websites in conformity with the client's demands from scratch with and using basic HTML, CSS, Javascript, PHP, or by using different content management systems.</li>
                 <li>Representing UP International GMBH in Romania. Promoting and importing UP Paragliders for the romanian pilots.</li>
             </ul>
             <div class="main-separator pattern-dots-sm"></div>
@@ -124,7 +124,7 @@
                 <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2003 - 2006</span></div>
             </div>
             <ul>
-                <li>Developement of personalized websites in conformity with the client's demands using basic HTML, CSS, and JavaScript</li>
+                <li>Development of personalized websites in conformity with the client's demands using basic HTML, CSS, and JavaScript</li>
                 <li>Graphic Design using Adobe Photoshop and Corel Draw</li>
                 <li>Cumputer Networking & Local Internet Service Provider in Petrosani, Romania</li>
                 <li>Selling mobile telecomunication services</li>
@@ -137,7 +137,7 @@
                 <div class="icons-style"><i class="fa-solid fa-graduation-cap icons-fa"></i></div>
                 <div class="icon-title"><h1>Education and Training</h1></div>
             </div>
-            <h2>Frontend Developement Course</h2>
+            <h2>Frontend Development Course</h2>
             <div class="company">
                 <div class="company-title"><h3>IT-Factory</h3></div>
                 <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2022 - Current</span></div>
@@ -146,13 +146,13 @@
                 <li>Learning Javascript, HTML, CSS</li>
             </ul>
             <div class="main-separator pattern-dots-sm"></div>
-            <h2>Qualification - Cargo Transport Certificate</h2>
+            <h2>Certification - Cargo Transport</h2>
             <div class="company">
                 <div class="company-title"><h3>Autoritatea Rutieră Română</h3></div>
                 <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2020</span></div>
             </div>
             <div class="main-separator pattern-dots-sm"></div>
-            <h2>Qualification - Driving Instructor Certificate</h2>
+            <h2>Cerification - Driving Instructor</h2>
             <div class="company">
                 <div class="company-title"><h3>Autoritatea Rutieră Română</h3></div>
                 <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2012</span></div>
