Small modifications. Trying to increase SEO score.

--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">   
-    <link rel="stylesheet" href="style.css">   
-    <title>Online Resume - Cristian Radescu</title>
-    <meta name="description" content="My name is Cristian Radescu an I am a Frontend Developer. This is my online resume.">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon.png">   
+    <title>My Online Resume - Cristian Radescu</title>
+    <meta name="description" content="My name is Cristian Radescu and I am a Frontend Developer. This is my online resume.">
 </head>
 <body>
     <aside class="sidebar pattern-diagonal-stripes-sm">
-        <div class="photo">
-            <div class="item">
-                <div class="polaroid"><img src="img/DSC_6161.JPG" alt="Profile Picture"></div>
-            </div>
+        <div class="item">
+            <div class="polaroid"><img src="img/DSC_6161.JPG" alt="Profile Picture"></div>
         </div>
         <div class="sidebar-titles">
             <h1>Cristian Rădescu</h1>
@@ -26,7 +25,7 @@
                 <div class="icons-style"><i class="fa-solid fa-location-dot icons-fa"></i></div>
                 <div class="icon-description"><p>Petrosani, Romania</p></div>
             </div>
-            <a href="mailto:c.radescu@yahoo.com" title="e-mail">
+            <a href="mailto:c.radescu@yahoo.com" title="send me an e-mail!">
                 <div class="contact-container">
                     <div class="icons-style"><i class="fa-solid fa-envelope icons-fa"></i></div>
                     <div class="icon-description"><p>c.radescu@yahoo.com</p></div>
@@ -90,84 +89,110 @@
             </li>
         </div> 
     </aside>
-
     <main class="main-container">
-
         <section class="main-section">
             <div class="title">
                 <div class="icons-style"><i class="fa-solid fa-person-digging icons-fa"></i></div>
-                <div class="icon-title"><h1>Work Experience</h1></div>
+                <div class="icon-title"><h2>Work Experience</h2></div>
             </div>
-            <h2>Web Developer and Manager</h2>
-            <div class="company">
-                <div class="company-title"><h3>Dynamic Mediart SRL</h3></div>
-                <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2006 - Current</span> </div>
+            <div>
+                <h3>Web Developer and Manager</h3>
+                <div class="company">
+                    <div class="company-title"><h4>Dynamic Mediart SRL</h4></div>
+                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2006 - Current</span> </div>
+                </div>
+                <ul>
+                    <li>Full development of personalized websites in conformity with client's demands from scratch and using basic HTML, CSS, Javascript, PHP, or by using different content management systems like Wordpress, Joomla or Drupal.</li>
+                    <li>Representing UP International GMBH in Romania. Promoting and importing UP Paragliders for the romanian pilots.</li>
+                </ul>
             </div>
-            <ul>
-                <li>Full development of personalized websites in conformity with the client's demands from scratch with and using basic HTML, CSS, Javascript, PHP, or by using different content management systems.</li>
-                <li>Representing UP International GMBH in Romania. Promoting and importing UP Paragliders for the romanian pilots.</li>
-            </ul>
             <div class="main-separator pattern-dots-sm"></div>
-            <h2>Driving instructor</h2>
-            <div class="company">
-                <div class="company-title"><h3>Self Employed</h3></div>
-                <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2012 - 2022</span> </div>
+            <div>
+                <h3>Driving instructor</h3>
+                <div class="company">
+                    <div class="company-title"><h4>Self Employed</h4></div>
+                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2012 - 2022</span> </div>
+                </div>
+                <ul>
+                    <li>Teaching people how to drive vehicles with main focus on safety.</li>
+                    <li>Training students in order to pass the exam for driving license.</li>
+                </ul>
             </div>
-            <ul>
-                <li>Teaching people how to drive vehicles with main focus on safety.</li>
-                <li>Training students in order to pass the exam for driving license.</li>
-            </ul>
             <div class="main-separator pattern-dots-sm"></div>
-            <h2>Web Developer and Networking</h2>
-            <div class="company">
-                <div class="company-title"><h3>New Impression SRL</h3></div>
-                <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2003 - 2006</span></div>
+            <div>
+                <h3>Web Developer and Networking</h3>
+                <div class="company">
+                    <div class="company-title"><h4>New Impression SRL</h4></div>
+                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2003 - 2006</span></div>
+                </div>
+                <ul>
+                    <li>Development of personalized websites in conformity with client's demands using basic HTML, CSS and JavaScript</li>
+                    <li>Graphic Design using Adobe Photoshop and Corel Draw</li>
+                    <li>Cumputer Networking & Local Internet Service Provider in Petrosani, Romania</li>
+                    <li>Selling mobile telecomunication services</li>
+                </ul>
             </div>
-            <ul>
-                <li>Development of personalized websites in conformity with the client's demands using basic HTML, CSS, and JavaScript</li>
-                <li>Graphic Design using Adobe Photoshop and Corel Draw</li>
-                <li>Cumputer Networking & Local Internet Service Provider in Petrosani, Romania</li>
-                <li>Selling mobile telecomunication services</li>
-            </ul>
             <div class="main-separator pattern-dots-sm"></div>        
         </section>
         
         <section class="main-section">
             <div class="title">
                 <div class="icons-style"><i class="fa-solid fa-graduation-cap icons-fa"></i></div>
-                <div class="icon-title"><h1>Education and Training</h1></div>
+                <div class="icon-title"><h2>Education and Training</h2></div>
             </div>
-            <h2>Frontend Development Course</h2>
-            <div class="company">
-                <div class="company-title"><h3>IT-Factory</h3></div>
-                <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2022 - Current</span></div>
-            </div>
-            <ul>
-                <li>Learning Javascript, HTML, CSS</li>
-            </ul>
-            <div class="main-separator pattern-dots-sm"></div>
-            <h2>Certification - Cargo Transport</h2>
-            <div class="company">
-                <div class="company-title"><h3>Autoritatea Rutieră Română</h3></div>
-                <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2020</span></div>
+            <div>
+                <h3>Frontend Development Course</h3>
+                <div class="company">
+                    <div class="company-title"><h4>IT-Factory</h4></div>
+                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2022 - Current</span></div>
+                </div>
+                <ul>
+                    <li>Learning Javascript, HTML, CSS in order to become a better Frontend Developer</li>
+                </ul>
             </div>
             <div class="main-separator pattern-dots-sm"></div>
-            <h2>Cerification - Driving Instructor</h2>
-            <div class="company">
-                <div class="company-title"><h3>Autoritatea Rutieră Română</h3></div>
-                <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2012</span></div>
+            <div>
+                <h3>Certification - Cargo Transport</h3>
+                <div class="company">
+                    <div class="company-title"><h4>Autoritatea Rutieră Română</h4></div>
+                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2020</span></div>
+                </div>
+                <ul>
+                    <li>Qualified high tonnage professional driver.</li>
+                </ul>
             </div>
             <div class="main-separator pattern-dots-sm"></div>
-            <h2>IP Addressing, Routing basics, TCP/IP networks</h2>
-            <div class="company">
-                <div class="company-title"><h3>CISCO Networking Academy</h3></div>
-                <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2001 - 2002</span></div>
+            <div>
+                <h3>Cerification - Driving Instructor</h3>
+                <div class="company">
+                    <div class="company-title"><h4>Autoritatea Rutieră Română</h4></div>
+                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2012</span></div>
+                </div>
+                <ul>
+                    <li>Qualified driving instructor for B category vehicles</li>
+                </ul>
+
             </div>
             <div class="main-separator pattern-dots-sm"></div>
-            <h2>IT Technician</h2>
-            <div class="company">
-                <div class="company-title"><h3>Informatics High-School</h3></div>
-                <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>1999 - 2003</span></div>
+            <div>
+                <h3>CCNA Certification</h3>
+                <div class="company">
+                    <div class="company-title"><h4>CISCO Networking Academy</h4></div>
+                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2001 - 2002</span></div>
+                </div>
+                <ul>
+                    <li>Ethernet networks running TCP/IP</li>
+                    <li>IP Addressing, Routing basics and structured cabling skills</li>
+                    <li>Network administration</li>
+                </ul>
+            </div>
+            <div class="main-separator pattern-dots-sm"></div>
+            <div>
+                <h3>IT Technician</h3>
+                <div class="company">
+                    <div class="company-title"><h4>Informatics High-School</h4></div>
+                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>1999 - 2003</span></div>
+                </div>
             </div>
             <div class="main-separator pattern-dots-sm"></div>                
         </section>
