--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2006 - Current</span> </div>
                 </div>
                 <ul>
-                    <li>Full development of personalized websites in conformity with client's demands from scratch and using basic HTML, CSS, Javascript, PHP, or by using different content management systems like Wordpress, Joomla or Drupal.</li>
-                    <li>Representing UP International GMBH in Romania. Promoting and importing UP Paragliders for the romanian pilots.</li>
+                    <li>Designed and developed customized websites using various tools such as HTML, CSS, Javascript, Wordpress, Joomla and Drupal to meet clients' unique needs.</li>
+                    <li>Applied graphic design skills to enhance the appeal and functionality of websites created for clients.</li>
+                    <li>Represent UP International GMBH in Romania, contributing to the promotion and import of UP Paragliders for the Romanian paragliding pilots.</li>    
                 </ul>
             </div>
             <div class="main-separator pattern-dots-sm"></div>
@@ -114,22 +115,21 @@
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2012 - 2022</span> </div>
                 </div>
                 <ul>
-                    <li>Teaching people how to drive vehicles with main focus on safety.</li>
-                    <li>Training students in order to pass the exam for driving license.</li>
+                    <li>Instructed and prepared students to successfully obtain their driving licenses.</li>
+                    <li>Prioritized safety education in all driving lessons, ensuring a strong foundation for safe driving practices.</li>
                 </ul>
             </div>
             <div class="main-separator pattern-dots-sm"></div>
             <div>
-                <h3>Web Developer and Networking</h3>
+                <h3>Web Developer and Network Administrator</h3>
                 <div class="company">
                     <div class="company-title"><h4>New Impression SRL</h4></div>
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2003 - 2006</span></div>
                 </div>
                 <ul>
-                    <li>Development of personalized websites in conformity with client's demands using basic HTML, CSS and JavaScript</li>
-                    <li>Graphic Design using Adobe Photoshop and Corel Draw</li>
-                    <li>Cumputer Networking & Local Internet Service Provider in Petrosani, Romania</li>
-                    <li>Selling mobile telecomunication services</li>
+                    <li>Developed customized websites using basic HTML, CSS and JavaScript to meet clients' specific requirements.</li>
+                    <li>Created stunning graphics utilizing Adobe Photoshop and Corel Draw to enhance the visual appeal of webpages.</li>
+                    <li>Created computer networks as a local Internet Service Provider, ensuring seamless connectivity for the organization.</li>
                 </ul>
             </div>
             <div class="main-separator pattern-dots-sm"></div>        
@@ -147,7 +147,7 @@
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2022 - Current</span></div>
                 </div>
                 <ul>
-                    <li>Learning Javascript, HTML, CSS in order to become a better Frontend Developer</li>
+                    <li>Learning Javascript, HTML, CSS in order to become a better Frontend Developer.</li>
                 </ul>
             </div>
             <div class="main-separator pattern-dots-sm"></div>
@@ -169,7 +169,7 @@
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2012</span></div>
                 </div>
                 <ul>
-                    <li>Qualified driving instructor for B category vehicles</li>
+                    <li>Qualified driving instructor for B category vehicles.</li>
                 </ul>
 
             </div>
@@ -181,16 +181,16 @@
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2001 - 2002</span></div>
                 </div>
                 <ul>
-                    <li>Ethernet networks running TCP/IP</li>
-                    <li>IP Addressing, Routing basics and structured cabling skills</li>
-                    <li>Network administration</li>
+                    <li>Ethernet networks running TCP/IP.</li>
+                    <li>IP Addressing, Routing basics and structured cabling skills.</li>
+                    <li>Network administration.</li>
                 </ul>
             </div>
             <div class="main-separator pattern-dots-sm"></div>
             <div>
                 <h3>IT Technician</h3>
                 <div class="company">
-                    <div class="company-title"><h4>Informatics High-School</h4></div>
+                    <div class="company-title"><h4>College of Informatics</h4></div>
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>1999 - 2003</span></div>
                 </div>
             </div>
