--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="https://github.com/cristiUP" target="_blank" title="My Github Profile">
                 <div class="contact-container">        
                     <div class="icons-style"><i class="fa-brands fa-github icons-fa"></i></div>
-                    <div class="icon-description"><p>Github.com/cristiUP</p></div>
+                    <div class="icon-description"><p>GitHub</p></div>
                 </div>
             </a>
             <a href="https://www.linkedin.com/in/cristi-radescu" target="_blank" title="My LinkedIN profile">
