--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="icons-style"><i class="fa-solid fa-location-dot icons-fa"></i></div>
                 <div class="icon-description"><p>Petrosani, Romania</p></div>
             </div>
-            <a href="mailto:c.radescu@yahoo.com" title="send me an e-mail!">
+            <a href="mailto:cristian.radescu85@gmail.com" title="send me an e-mail!">
                 <div class="contact-container">
                     <div class="icons-style"><i class="fa-solid fa-envelope icons-fa"></i></div>
                     <div class="icon-description"><p>c.radescu@yahoo.com</p></div>
@@ -70,6 +70,9 @@
             <li>
                 <h3>BOOTSTRAP</h3><span class="bar"><span class="bootstrap"></span></span><!-- skill bar 4 -->
             </li>
+            <li>
+                <h3>REACT</h3><span class="bar"><span class="react"></span></span><!-- skill bar 5 -->
+            </li>
         </ul>
         <div class="sidebar-separator pattern-dots-sm"></div>  
         <div class="sidebar-titles">
@@ -88,27 +91,44 @@
                 <h3>German</h3><span class="bar"><span class="german"></span></span><!-- lang bar 3 -->
             </li>
         </ul>
+        <div class="sidebar-separator pattern-dots-sm"></div>  
+        <div class="sidebar-titles">
+            <h2>Soft Skills</h2>
+        </div> 
+        <ul class="soft-skills">
+            <li><h4>Optimistic with sense of humor</h4></li>
+            <li><h4>Adaptable to new challenges, ambitious, proactive</h4></li>
+            <li><h4>Teamplayer</h4></li>
+            <li><h4>Analytical thinking and problem-solving attitude</h4></li>
+            <li><h4>Responsible</h4></li>
+            <li><h4>Attention to details</h4></li>
+        </ul>
     </aside>
     <main class="main-container">
         <section class="main-section">
+            <article>
+                <p>I am a Frontend Developer with a passion for creating beautiful and user-friendly web applications. I have experience working with HTML, CSS, JavaScript, as well as using tools like Git, Bootstrap, and WordPress. I have a keen eye for aesthetics and usability and I am always eager to learn new technologies and frameworks.</p>
+                <p>I enjoy working on challenging projects that require creativity and problem-solving skills. I am looking for opportunities to join a dynamic and innovative team where I can apply my skills and grow as a developer.</p>
+            </article>
+            <div class="main-separator pattern-dots-sm"></div>
             <div class="title">
                 <div class="icons-style"><i class="fa-solid fa-person-digging icons-fa"></i></div>
                 <div class="icon-title"><h2>Work Experience</h2></div>
             </div>
-            <div>
+            <article>
                 <h3>Web Developer and Manager</h3>
                 <div class="company">
                     <div class="company-title"><h4>Dynamic Mediart SRL</h4></div>
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2006 - Current</span> </div>
                 </div>
                 <ul>
-                    <li>Designed and developed customized websites using various tools such as HTML, CSS, Javascript, Wordpress, Joomla and Drupal to meet clients' unique needs.</li>
-                    <li>Applied graphic design skills to enhance the appeal and functionality of websites created for clients.</li>
+                    <li>Design and develop customized websites using various tools such as HTML, CSS, Javascript, Wordpress, Joomla and Drupal to meet clients' unique needs.</li>
+                    <li>Apply graphic design skills to enhance the appeal and functionality of websites created for clients.</li>
                     <li>Represent UP International GMBH in Romania, contributing to the promotion and import of UP Paragliders for the Romanian paragliding pilots.</li>    
                 </ul>
-            </div>
+            </article>
             <div class="main-separator pattern-dots-sm"></div>
-            <div>
+            <article>
                 <h3>Driving instructor</h3>
                 <div class="company">
                     <div class="company-title"><h4>Self Employed</h4></div>
@@ -118,20 +138,20 @@
                     <li>Instructed and prepared students to successfully obtain their driving licenses.</li>
                     <li>Prioritized safety education in all driving lessons, ensuring a strong foundation for safe driving practices.</li>
                 </ul>
-            </div>
+            </article>
             <div class="main-separator pattern-dots-sm"></div>
-            <div>
+            <article>
                 <h3>Web Developer and Network Administrator</h3>
                 <div class="company">
                     <div class="company-title"><h4>New Impression SRL</h4></div>
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2003 - 2006</span></div>
                 </div>
                 <ul>
-                    <li>Developed customized websites using basic HTML, CSS and JavaScript to meet clients' specific requirements.</li>
-                    <li>Created stunning graphics utilizing Adobe Photoshop and Corel Draw to enhance the visual appeal of webpages.</li>
+                    <li>Developed customized websites using basic HTML, CSS and JavaScript to meet clients' specific requirements</li>
+                    <li>Created stunning graphics using Adobe Photoshop and Corel Draw to enhance the visual appeal of webpages.</li>
                     <li>Created computer networks as a local Internet Service Provider, ensuring seamless connectivity for the organization.</li>
                 </ul>
-            </div>
+            </article>
             <div class="main-separator pattern-dots-sm"></div>        
         </section>
         
@@ -140,18 +160,22 @@
                 <div class="icons-style"><i class="fa-solid fa-graduation-cap icons-fa"></i></div>
                 <div class="icon-title"><h2>Education and Training</h2></div>
             </div>
-            <div>
+            <article>
                 <h3>Frontend Development Course</h3>
                 <div class="company">
-                    <div class="company-title"><h4>IT-Factory</h4></div>
-                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2022 - Current</span></div>
+                    <div class="company-title"><h4>ITFactory SRL</h4></div>
+                    <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>2022 - 2023</span></div>
                 </div>
                 <ul>
-                    <li>Learning Javascript, HTML, CSS in order to become a better Frontend Developer.</li>
+                    <li>HTML, CSS and JavaScript</li>
+                    <li>Building modern mobile first responsive web applications</li>
+                    <li>Working with Git and Github</li>
+                    <li>Working with DOM Manipulation and XHR Requests</li>
+                    <li>Object Oriented JavaScript</li>
                 </ul>
-            </div>
+            </article>
             <div class="main-separator pattern-dots-sm"></div>
-            <div>
+            <article>
                 <h3>Certification - Cargo Transport</h3>
                 <div class="company">
                     <div class="company-title"><h4>Autoritatea Rutieră Română</h4></div>
@@ -160,9 +184,9 @@
                 <ul>
                     <li>Qualified high tonnage professional driver.</li>
                 </ul>
-            </div>
+            </article>
             <div class="main-separator pattern-dots-sm"></div>
-            <div>
+            <article>
                 <h3>Cerification - Driving Instructor</h3>
                 <div class="company">
                     <div class="company-title"><h4>Autoritatea Rutieră Română</h4></div>
@@ -172,9 +196,9 @@
                     <li>Qualified driving instructor for B category vehicles.</li>
                 </ul>
 
-            </div>
+            </article>
             <div class="main-separator pattern-dots-sm"></div>
-            <div>
+            <article>
                 <h3>CCNA Certification</h3>
                 <div class="company">
                     <div class="company-title"><h4>CISCO Networking Academy</h4></div>
@@ -185,16 +209,20 @@
                     <li>IP Addressing, Routing basics and structured cabling skills.</li>
                     <li>Network administration.</li>
                 </ul>
-            </div>
+            </article>
             <div class="main-separator pattern-dots-sm"></div>
-            <div>
+            <article>
                 <h3>IT Technician</h3>
                 <div class="company">
-                    <div class="company-title"><h4>College of Informatics</h4></div>
+                    <div class="company-title"><h4>Computer Science High-School</h4></div>
                     <div class="icons-style"><i class="fa-solid fa-calendar-days icons-fa"></i> <span>1999 - 2003</span></div>
                 </div>
-            </div>
-            <div class="main-separator pattern-dots-sm"></div>                
+                <ul>
+                    <li>Computer operations and basic programming in Turbo Pascal, C++ and FoxPro</li>
+                    <li>Software and Hardware debugging, Computers and Networks maintenance</li>
+                    <li>Setting up computer networks and assisting employees and customers with IT-related problems</li>
+                </ul>
+            </article>
         </section>
     </main> 
 </body>
